[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dreem"
version = "1.0.0"
description = "Implementation of Prof Silvi Rouskin's DREEM algorithm by Yves Martin, Scott Grote, and Matty Allan"
authors = [
    "Yves Martin des Taillades <yves@martin.yt>",
    "Scott Grote",
    "Matty Allan"
]
license = "MIT"
repository = "https://github.com/rouskinlab/dreem"
readme = "README.md"
homepage = "https://github.com/rouskinlab/dreem"
keywords = ["dreem", "Rouskin", "algorithm"]

[tool.poetry.dependencies]
python = "^3.10"
dreem = {path = ".", develop = true}
