[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "dreem"
description = "Implementation of Prof Silvi Rouskin's DREEM algorithm by Yves Martin, Scott Grote, Matty Allan and Alberic de Lajarte"
authors = [
    "Yves Martin des Taillades <yves@martin.yt>",
    "Scott Grote",
    "Matty Allan",
    "Alberic de Lajarte"
]
license = "MIT"
repository = "https://github.com/rouskinlab/dreem"
readme = "README.md"
homepage = "https://github.com/rouskinlab/dreem"
keywords = ["dreem", "Rouskin", "rnastructure"]

[tool.poetry.dependencies]
python = "3.10"
dreem = {path = ".", develop = true}
